--- a/public/contact.html
+++ b/public/contact.html
@@ -10,8 +10,8 @@
     <p>Email: heartofgrafx@gmail.com</p>
     <p>Address:</p>
     <p>
-      547 S Dickel St<br />
-      Anaheim, CA 92805<br />
+      Orange County<br />
+      Yorba Linda, CA 92887<br />
       <!-- California <br /> -->
     </p>
   </body>
